argocd/argocd-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
    nodePort: 30080  # HTTP access on port 30080
  - name: https
    port: 443
    targetPort: 8080
    protocol: TCP
    nodePort: 30443  # HTTPS access on port 30443
  selector:
    app.kubernetes.io/name: argocd-server
